fixes page numbers alignment

--- a/v.js/v.css
+++ b/v.js/v.css
@@ -167,7 +167,7 @@ a.op[href="#;"] { display: none; }
 	width: 2em;
 	text-align: center
 }
-#topic_index > .inner {
+#topics_index > .inner {
 	text-align: left;
 }
 /* aligned */
